feat (lab1): not done

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,12 @@ cmake-build-*/
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
 
+lab_1/java/.idea/misc.xml
+lab_1/java/.idea/modules.xml
+lab_1/java/.idea/workspace.xml
+lab_1/java/out/production/untitled/BreakerThread.class
+lab_1/java/out/production/untitled/ComputeThread.class
+lab_1/java/out/production/untitled/Main.class
+lab_1/c#/.vs/lab_1/FileContentIndex/5deb98f2-8797-4c51-9589-e83a586c553b.vsidx
+lab_1/c#/.vs/lab_1/FileContentIndex/read.lock
+lab_1/java/untitled.iml
