--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,6 @@ lab_1/java/out/production/untitled/Main.class
 lab_1/c#/.vs/lab_1/FileContentIndex/5deb98f2-8797-4c51-9589-e83a586c553b.vsidx
 lab_1/c#/.vs/lab_1/FileContentIndex/read.lock
 lab_1/java/untitled.iml
+lab_1/c#/.vs/lab_1/FileContentIndex/0ba8db4d-e309-4caf-837c-255d639ede61.vsidx
+lab_1/java/.idea/.name
+lab_1/java/.idea/vcs.xml
